--- a/static/main/main.css
+++ b/static/main/main.css
@@ -35,6 +35,10 @@ body {
 	flex-direction: column;
 	margin: 0 auto;
 }
+.c-hidden {
+	display: none !important;
+	opacity: 0 !important;
+}
 .main-content {
 	padding-top: 20px;
 	padding-bottom: 48px;
@@ -327,4 +331,7 @@ input:focus,
 textarea:focus,
 select:focus {
 	border-color: var(--button-hover-background-color);
+}
+#ratedBooks {
+	padding-bottom: 100px;
 }
