added: mistral test implementation

--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="/static/main/main.css" />
 		<link rel="stylesheet" href="/static/main/app.css" />
 	</head>
-	<body>
+	<body data-theme'>
 		<div class="choice-screen">
 			<h2>Upload Book Images</h2>
 			<button id="singleBookUploadBtn" class="btn btn-primary">
