--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,8 @@
 		<link rel="stylesheet" href="/static/search/main.css" />
 		<script src="/static/general.js"></script>
 	</head>
-	<body>
+	<body data-theme>
+		
 		<div class="c-searchbox">
 			<div class="c-searchbar">
 				<input type="text" id="searchQuery" placeholder="Search for books..." />
@@ -103,5 +104,6 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="/static/search/app.js"></script>
+		<script src="/static/general.js"></script>
 	</body>
 </html>
