--- a/templates/history.html
+++ b/templates/history.html
@@ -12,7 +12,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 		<script src="/static/general.js"></script>
 	</head>
-	<body>
+	<body data-theme>
 		<div class="container">
 			<h1>Search History</h1>
 			<div id="searchHistory"></div>
@@ -96,5 +96,6 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script src="/static/history/app.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<script src="/static/general.js"></script>
 	</body>
 </html>
