--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 		<!-- Add Firebase products that you want to use -->
 		<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
 	</head>
-	<body>
+	<body data-theme'>
 		<div class="o-container">
 			<div class="c-login-container">
 				<div class="c-filler-mobile">
@@ -81,5 +81,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="/static/general.js"></script>
 		<script src="/static/login/app.js"></script>
+		<script src="/static/general.js"></script>
 	</body>
 </html>
