--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="/static/profile/main.css" />
 		<script src="/static/general.js"></script>
 	</head>
-	<body>
+	<body data-theme'>
 		<div class="container mt-3 book-container">
 			<h1 class="text-center mb-4">Your Rated Books</h1>
 			<div id="ratedBooks" class="row">
@@ -100,5 +100,6 @@
 		</script>
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="/static/profile/app.js"></script>
+		<script src="/static/general.js"></script>
 	</body>
 </html>
